# gsb_utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  Channel.h  ConsoleCP.h  Context.h  DDate.h  Debug.h  README.md  SStrings.h  TTimer.h  ThreadPool.h  debug.cpp  debug.h  gsb_utils.code-workspace  gsbutils.h  gsbutils.pc.in  gsbutilsConfig.cmake.in  thread_pool.h
.github/workflows/: cmake.yml
test/: example.cpp  test-chan.cpp  test-context.cpp  test-noexcept.cpp
